# aero-quant-

./:  .gitignore  CHANGELOG.md  README.md  README.md   pyproject.toml  requeriments.txt  requirements.txt
 .github/workflows/: ci.yml
configs/: dashboard.yaml  sensors.yaml
docs/architecture/: AeroQuant_Lab_Arquitetura.md
scripts/: generate_synthetic_data.py
src/aeroquant/application/services/: detect_anomalies_service.py  monitor_fleet_service.py  predict_rul_service.py
src/aeroquant/domain/entities/: aircraft.py   anomaly_event.py  component.py   defect.py  health_snapshot.py  health_state.py  rul_estimate.py  simulation_result.py  simulation_scenario.py
src/aeroquant/domain/ports/: i_image_repository.py  i_model_repository.py  i_sensor_source.py   i_twin_repository.py
src/aeroquant/infrastructure/config/: config_loader.py  logging_setup.py
src/aeroquant/infrastructure/ml/: model_repository.py
src/aeroquant/infrastructure/persistence/: duckdb_repository.py
src/aeroquant/infrastructure/sensors/: sensor_data_generator.py  stochastic_processes.py
src/aeroquant/infrastructure/simulation/: monte_carlo_simulator.py
src/aeroquant/infrastructure/twin/: digital_twin_engine.py  twin_repository.py
tests/integration/: test_sensor_to_twin_integration.py
tests/unit/: test_aircraft.py  test_anomaly_event.py  test_component.py  test_defect.py  test_digital_twin_engine.py  test_health_snapshot.py  test_health_state.py  test_rul_estimate.py  test_sensor_data_generator.py  test_simulation_result.py  test_simulation_scenario.py  test_stochastic_processes.py
(+27 files in other folders)
