[project]
name = "aeroquant-lab"
version = "1.0.0"
description = "AI-Based Aircraft Health Monitoring, Digital Twin & Computer Vision Platform (research/education project)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AeroQuant Lab" }]
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.2",
    "pyyaml>=6.0",
    "duckdb>=0.10",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.4", "xgboost>=2.0", "lightgbm>=4.3"]
dl = ["torch>=2.2", "torchvision>=0.17"]
cv = ["opencv-python-headless>=4.9", "albumentations>=1.4"]
viz = ["streamlit>=1.33", "plotly>=5.20"]
xai = ["shap>=0.45"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.9", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true